fix: highlights and text wrapping for dropdown

--- a/vis/stylesheets/modules/list/_entry.scss
+++ b/vis/stylesheets/modules/list/_entry.scss
@@ -925,3 +925,9 @@ img#preview_page {
     display: inline-block;
     max-width: 100%;
 }
+
+.wrap {
+    white-space: normal;
+    overflow: visible;
+    text-overflow: unset;
+}
